ecmascript/parser/tests/test262-error-references/fail/1bc43dd97a16b9bb.module.js.stderr
error: Expected from, got Some(;)
 --> $DIR/tests/test262-parser/fail/1bc43dd97a16b9bb.module.js:1:10
  |
1 | import {};
  |          ^

